--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "@reduxjs/toolkit": "^2.8.2",
     "@tanstack/react-query": "^5.85.5",
+    "@types/moment": "^2.13.0",
     "@types/redux-persist": "^4.3.1",
     "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "formik": "^2.4.6",
     "lucide-react": "^0.511.0",
+    "moment": "^2.30.1",
     "next": "15.3.8",
     "next-pwa": "^5.6.0",
     "plugandplay-react-query-hooks": "^1.0.0",
