--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "plugandplay-react-query-hooks": "^1.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-onesignal": "^3.4.6",
     "react-redux": "^9.2.0",
     "redux-persist": "^6.0.0",
     "socket.io": "^4.8.3",
