--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "socket.io": "^4.8.3",
     "socket.io-client": "^4.8.3",
     "tailwind-merge": "^3.3.0",
+    "webtonative": "^1.0.84",
     "yup": "^1.7.0"
   },
   "devDependencies": {
